Clean up, added svg icons

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "jshint-stylish": "^1.0.0",
     "main-bower-files": "^2.5.0",
     "opn": "^1.0.0",
-    "wiredep": "^2.0.0"
+    "wiredep": "^2.0.0",
+    "vinyl": "~0.4.6",
+    "gulp-svg-sprite": "~1.0.19"
   }
 }
