--- a/app/.htaccess
+++ b/app/.htaccess
@@ -1,4 +1,24 @@
 # ----------------------------------------------------------------------
+# Fetching all 404s
+# ----------------------------------------------------------------------
+
+# RewriteEngine on 
+# RewriteCond %{REQUEST_FILENAME} !-d
+# RewriteCond %{REQUEST_FILENAME} !-f
+# RewriteRule ^ / [301,L]
+
+# ----------------------------------------------------------------------
+# Valid x-ua-compatible headers
+# ----------------------------------------------------------------------
+
+<IfModule mod_headers.c>
+  Header set X-UA-Compatible "ie=edge"
+  <FilesMatch "\.(appcache|crx|css|eot|gif|htc|ico|jpe?g|js|m4a|m4v|manifest|mp4|oex|oga|ogg|ogv|otf|pdf|png|safariextz|svg|svgz|ttf|vcf|webm|webp|woff|xml|xpi)$">
+    Header unset X-UA-Compatible
+  </FilesMatch>
+</IfModule>
+
+# ----------------------------------------------------------------------
 # Gzip compression
 # ----------------------------------------------------------------------
 
