--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "joao-pt",
   "private": true,
   "dependencies": {
-    "normalize.css": "~3.0.2"
+    "normalize.css": "~3.0.2",
+    "scrollReveal.js": "~2.1.0"
   }
 }
