--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "joaoramos.github.io",
   "version": "1.0.0",
-  "description": "This is a simple static page. Either fire up `index.html` on your browser or serve it locally using your favorite local tiny hipster web server.",
+  "description": "This is a simple static page. Either fire up `index.html` on your browser or serve it locally using your favorite tiny hipster web server.",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
